--- a/LibSDLSamples/LibSDLSamples.vcxproj
+++ b/LibSDLSamples/LibSDLSamples.vcxproj
@@ -143,7 +143,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileHelper.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\Downloads\bla.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
