--- a/LibSDLSamples/LibSDLSamples.vcxproj
+++ b/LibSDLSamples/LibSDLSamples.vcxproj
@@ -158,6 +158,9 @@
   <ItemGroup>
     <ClInclude Include="FileHelper.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
