--- a/LibSDLSamples/LibSDLSamples.vcxproj.filters
+++ b/LibSDLSamples/LibSDLSamples.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="FileHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TileVectorHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\..\Downloads\bla.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TileVectorHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
