--- a/LibSDLSamples/LibSDLSamples.vcxproj.filters
+++ b/LibSDLSamples/LibSDLSamples.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="TileVectorHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Downloader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\..\Downloads\bla.txt" />
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TileVectorHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Downloader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
