File downloads are now working - need to add vtzero now to decode the mvt files to get the vectors back

--- a/LibSDLSamples/LibSDLSamples.vcxproj
+++ b/LibSDLSamples/LibSDLSamples.vcxproj
@@ -96,7 +96,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-      <AdditionalIncludeDirectories>C:\Users\elemenopy\Downloads\curl-7.78.0\curl-7.78.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\elemenopy\source\repos\vtzero\include\;C:\Users\elemenopy\Downloads\curl-7.78.0\curl-7.78.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
