--- a/LibSDLSamples/LibSDLSamples.vcxproj.filters
+++ b/LibSDLSamples/LibSDLSamples.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Downloader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VTZeroUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\..\Downloads\bla.txt" />
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Downloader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VTZeroUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
